# poetry-cookiecutter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter.json  copier.yml  lol.txt  pyproject.toml  test.sh
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
hooks/: post_gen_project.py  post_gen_project.sh
template/: .dockerignore  .gitignore  .pre-commit-config.yaml.jinja  Dockerfile.jinja  README.md.jinja  docker-compose.yml.jinja  pyproject.toml.jinja  {{_copier_conf.answers_file}}.jinja
template/.devcontainer/: devcontainer.json.jinja
template/src/{{ project_name_snake_case }}/: __init__.py.jinja  {% if with_fastapi_api %}api.py{% endif %}.jinja  {% if with_typer_cli %}cli.py{% endif %}.jinja
template/tests/: __init__.py.jinja  test_import.py.jinja  {% if with_fastapi_api %}test_api.py{% endif %}.jinja  {% if with_typer_cli %}test_cli.py{% endif %}.jinja
template/{% if ci == 'github' %}.github{% endif %}/: dependabot.yml.jinja
template/{% if ci == 'github' %}.github{% endif %}/workflows/: test.yml.jinja  {% if project_type == "app" %}deploy.yml{% endif %}.jinja  {% if project_type == "package" %}publish.yml{% endif %}.jinja
{{ cookiecutter.__package_name_kebab_case }}/: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  teamwork_secret_variables.txt
{{ cookiecutter.__package_name_kebab_case }}/.devcontainer/: devcontainer.json  init  init.cmd
{{ cookiecutter.__package_name_kebab_case }}/.github/: dependabot.yml  pull_request_template.md  teamwork_secrets.txt
{{ cookiecutter.__package_name_kebab_case }}/.github/workflows/: deploy-model.yml  deploy.yml  endpoint.yml  publish.yml  serve-model.yml  ship.yml  teamwork.yml  test.yml  train.yml
{{ cookiecutter.__package_name_kebab_case }}/__tests__/: test_api.py  test_app_cli.py  test_cli.py  test_sentry.py  test_train.py
{{ cookiecutter.__package_name_kebab_case }}/alembic/: env.py
{{ cookiecutter.__package_name_kebab_case }}/src/serve/: api-ml-inference.py  api.py  package.json  requirements.txt  serverless.yml
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/: __init__.py  api.py  app.py  cli.py  deploy-inference.py  deploy.py  fit.py  sentry.py  settings.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/deploy/: inference.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/orm/: database.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/orm/crud/: base.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/orm/models/: models.py
{{ cookiecutter.__package_name_kebab_case }}/src/{{ cookiecutter.__package_name_snake_case }}/train/: cli.py  train.py
{{ cookiecutter.__package_name_kebab_case }}/tests/: test_api.py  test_cli.py  test_import.py
{{ cookiecutter.__project_name_kebab_case }}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.__project_name_kebab_case }}/.devcontainer/: devcontainer.json
{{ cookiecutter.__project_name_kebab_case }}/.github/: dependabot.yml  pull_request_template.md
{{ cookiecutter.__project_name_kebab_case }}/.github/workflows/: publish.yml  teamwork.yml  test.yml
{{ cookiecutter.__project_name_kebab_case }}/src/{{ cookiecutter.__project_name_snake_case }}/: __init__.py  api.py  cli.py
{{ cookiecutter.__project_name_kebab_case }}/tests/: __init__.py  test_api.py  test_cli.py  test_import.py
{{ cookiecutter.package_name|slugify }}/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  {% if cookiecutter.continuous_integration == "GitLab" %}.gitlab-ci.yml{% endif %}  {% if cookiecutter.with_streamlit_app|int %}streamlit_app.py{% endif %}
{{ cookiecutter.package_name|slugify }}/.devcontainer/: devcontainer.json
{{ cookiecutter.package_name|slugify }}/.github/: dependabot.yml
{{ cookiecutter.package_name|slugify }}/.github/workflows/: publish.yml  test.yml  {% if cookiecutter.with_fastapi_api|int or cookiecutter.with_streamlit_app|int %}deploy.yml{% endif %}  {% if not cookiecutter.with_fastapi_api|int and not cookiecutter.with_streamlit_app|int %}publish.yml{% endif %}
{{ cookiecutter.package_name|slugify }}/.github/workflows/build_push/: action.yml
{{ cookiecutter.package_name|slugify }}/src/{{ cookiecutter.package_name|slugify|replace("-", "_") }}/: __init__.py  {% if cookiecutter.sentry_dsn %}sentry.py{% endif %}  {% if cookiecutter.with_fastapi_api|int %}api.py{% endif %}  {% if cookiecutter.with_sentry_logging|int %}sentry.py{% endif %}
{{ cookiecutter.package_name|slugify }}/tests/: __init__.py  test_api.py  test_version.py  {% if cookiecutter.with_sentry_logging|int %}test_sentry.py{% endif %}  {% if cookiecutter.with_typer_cli|int %}test_cli.py{% endif %}
